added my id's to the readme

--- a/lab2/README
+++ b/lab2/README
@@ -1,6 +1,6 @@
 README
 =====================================
-Michael Salerno, XXXXXXXXX, cse533-XX
+Michael Salerno, 108512298, cse533-8
 Scott Harvey,    108272691, cse533-11
 =====================================
 
