--- a/lab3/README
+++ b/lab3/README
@@ -1,17 +1,33 @@
 
 
 
+Routing Table:
 
-RREQ received:
-    1. Update routing table for reverse route
-        *   if rreq.hops <= route.hops then update route
-            * route.broadcast_id = rreq.broadcast_id
-        *   NOTE if this is a new route      ex) never heard of rreq.src_ip before
-        *   NOTE if rreq.hops < route.hops   ex) more eff. route
-    2. RREP generation:
-        a. If I have route to rreq.dst_ip then send RREP
+| DestIP | BroadcastID | NextHop(MAC) | IfIndex | NumHops | Timestamp |
 
-    3. RREQ flooding:
-        a. If either NOTE from 1, set the rrep_sent flag.
-        b. send RREQ on all interfaces except the source.
-        c. don't send rrep if already sent, unless NOTE from 1
+
+
+On RREQ received (Overview):
+============================
+1. If we are the dest node OR we have a non-stale route to dest.
+    * Then we RREP.
+
+2. Else we send RREQ on all interfaces except the one the RREQ arrived on.
+
+
+On RREQ received (Detailed):
+============================
+1. Update Reverse Route in routing table:
+    a. Always do: route.broadcast_id = RREQ.broadcast_id ?????
+    b. If RREQ.hops <= route.hops then update route.
+        1. Update the NxtHop to the src MAC in the sockaddr_ll.
+    * Set NEW_ROUTE if no prev route to src or route was stale.
+    * Set EFF_ROUTE if RREQ.hops < route.hops (more efficient route).
+
+2. RREP generation. Only if(RREQ.rrep_sent == 0):
+    a. If I have route to RREQ.dst_ip then send RREP
+
+3. RREQ flooding. Only if(!we_sent_RREP || (NEW_ROUTE || EFF_ROUTE)):
+    a. If we sent RREP, set the RREQ.rrep_sent flag.
+    b. Send RREQ on all interfaces except the source interface.
+    
