--- a/lab3/README
+++ b/lab3/README
@@ -1,7 +1,7 @@
 README for Assignment 3
 ===========================================
 |  Scott Harvey     cse533-11  108272691  |
-|  Michael Salerno  cse533-8   xxxxxxxxx  |
+|  Michael Salerno  cse533-8   108512298  |
 ===========================================
 
 When running the client and ODR the user can type ^D to terminate.
@@ -9,8 +9,14 @@ The server doesn't have that.
 
 
 Special Cases:
- If two clients on a VM1 both msg_send to vm5, and vm1 has no route to vm5,
- then both msg_send()'s will generate an RREQ. We feel this is not an problem.
+1. If two clients on a vm1 both msg_send() to vm5, and vm1 has no route to vm5,
+  then both msg_send()'s will generate equivalent RREQs. We reason that this
+  is not a problem.
+
+2. If a msg_send() has set force_redisc we do not immediately drop the route
+  from our routing table. Instead we send a RREQ with the force_redisc flag
+  set. The corresponding RREP that eventually comes back will also have the
+  force_redisc flag set, causing us to forcefully update our route.
 
 =======================
 Outline of ODR Program:
@@ -20,8 +26,8 @@ select(unixfd/rawfd):
     1. Local dst IP: Forward to local dst port.
     2. Remote dst IP:
         a. get_route(dst_IP)
-            - no route/stale/f_redisc:    send RREQ over rawfd
-            - had a route:                send DATA over rawfd
+            - force_redisc/no route/stale:  send RREQ over rawfd
+            - had a route:                  send DATA over rawfd
 
   rawfd:
     * RREQ: see ODR Overview
@@ -53,16 +59,16 @@ On RREQ received (Detailed):
 ============================
 1. Update Reverse Route in routing table:
     a. Always do: route.broadcast_id = RREQ.broadcast_id ?????
-    b. If RREQ.hops <= route.hops || RREQ.f_redisc then update route.
+    b. If RREQ.hops <= route.hops || RREQ.force_redisc then update route.
         1. Update the NxtHop to the src MAC in the sockaddr_ll.
     * Set NEW_ROUTE if no prev route to src or route was stale.
     * Set EFF_ROUTE if RREQ.hops < route.hops (more efficient route).
 
 if(RREQ.broadcast_id > route.broadcast_id || EFF_ROUTE):
     2. RREP generation.
-        Only if(RREQ.rrep_sent == 0 && (RREQ.f_redisc == 0 || i_am_dest)):
+        Only if(RREQ.rrep_sent == 0 && (RREQ.force_redisc == 0 || i_am_dest)):
         a. If I have route to RREQ.dst_ip then send RREP
-        b. If I am dest and RREQ.f_redisc, keep RREQ.f_redisc set
+        b. If I am dest and RREQ.force_redisc, keep RREQ.force_redisc set
 
     3. RREQ flooding. Only if(!we_sent_RREP || (NEW_ROUTE || EFF_ROUTE)):
         a. If we sent RREP, set the RREQ.rrep_sent flag.
