--- a/lab3/README
+++ b/lab3/README
@@ -8,11 +8,14 @@ When running the client and ODR the user can type ^D to terminate.
 The server doesn't have that.
 
 
+To look at ANSI color output that has been written to a file:
+$ less -R fileWithANSIColor
+
+
 Special Cases:
-1. ***  PARTIAL FIX in commit eecc442bf839576fc6f3f5ca85936b5eb5dd8178  ***
-    If two clients on a vm1 both msg_send() to vm5, and vm1 has no route to vm5,
-  then both msg_send()'s will generate equivalent RREQs. We reason that this
-  is not a problem.
+1. If two clients on a vm1 both msg_send() to vm5, and vm1 has no route to vm5,
+  then only the first msg_send() will generate an RREQ.
+
 
 2. *** FIX to immediately drop the route: ***
     If a msg_send() has set force_redisc we do not immediately drop the route
